5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1635_2446.log
== TEST (2019-04-15 13:30:46) 
-- CODE:
s1=int(input("senha 1: ")

w = (s1//100000)%10
x = (s1//10000)%10
y = (s1//1000)%10
z = (s1//100)%10
a = (s1//10)%10
b = s1%10
j=x+z+b
h=w+y+a
k=j%h
if(k==0):
	msg="acesso liberado"
else:
	msg="senha invalida"
print(msg)
-- ERROR:
File "XXXX", line 3
    w = (s1//100000)%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:04) 
-- CODE:
s1=int(input("senha 1: ")
w = (s1//100000)%10
x = (s1//10000)%10
y = (s1//1000)%10
z = (s1//100)%10
a = (s1//10)%10
b = s1%10
j=x+z+b
h=w+y+a
k=j%h
if(k==0):
	msg="acesso liberado"
else:
	msg="senha invalida"
print(msg)
-- ERROR:
File "XXXX", line 2
    w = (s1//100000)%10
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:43) 
-- CODE:
s1=int(input("senha 1: "))
w = (s1//100000)%10
x = (s1//10000)%10
y = (s1//1000)%10
z = (s1//100)%10
a = (s1//10)%10
b = s1%10
j=x+z+b
h=w+y+a
k=j%h
if(k==0):
	msg="acesso liberado"
else:
	msg="senha invalida"
print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:31:54) 
-- CODE:
s1=int(input("senha 1: "))
w = (s1//100000)%10
x = (s1//10000)%10
y = (s1//1000)%10
z = (s1//100)%10
a = (s1//10)%10
b = s1%10
j=x+z+b
h=w+y+a
k=j%h
if(k==0):
	msg="acesso liberado"
else:
	msg="senha invalida"
print(msg)
-- EXECUTION TIME:
0.153662
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
